--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -15,6 +15,7 @@
   "message": "رسالة",
   "sending": "جارٍ الإرسال…",
   "submit": "إرسال",
+  "data_security": "أمان البيانات",
   "con_param1": "نحن لا نشارك معلوماتك الشخصية مع أي شخص. تحقق من",
   "privacy_policy_form": "“سياسة الخصوصية”",
   "con_param2": "لمزيد من المعلومات",
@@ -171,7 +172,7 @@
   "wlc_platform": "منصة المراهنات ذات العلامة البيضاء",
   "exch_iframe": "إطار عمل تبادل الرهانات",
   "footer_para_1": "شعار VRNL والمواد الرسومية هي ملكية فكرية للشركة ولا يجوز نسخها أو إعادة إنتاجها أو توزيعها أو عرضها دون موافقة خطية من VRNL.",
-  "footer_para_2": "حقوق الطبع والنشر © 2020 VRNL ltd. جميع الحقوق محفوظة.",
+  "footer_para_2": "حقوق الطبع والنشر © 2025 VRNL ltd. جميع الحقوق محفوظة.",
   "home": "الرئيسية",
   "betting": "المراهنات",
   "esports_betting": "المراهنات الإلكترونية",
