--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -171,7 +171,7 @@
   "wlc_platform": "White Label Betting Platform",
   "exch_iframe": "Exchangebook iframe",
   "footer_para_1": "Логото и графичният материал на Vrnl са интелектуална собственост на компанията и не могат да бъдат копирани, възпроизвеждани, разпространявани или показвани без писмено съгласие на Vrnl.",
-  "footer_para_2": "Авторски права © 2020 Vrnl ltd. Всички права запазени.",
+  "footer_para_2": "Авторски права © 2025 Vrnl ltd. Всички права запазени.",
   "home": "Начало",
   "betting": "Залози",
   "esports_betting": "Esports залози",
@@ -597,5 +597,6 @@
     "SUBMITTING": "Изпращане на заявката...",
     "SUCCESS": "Заявката за демонстрация е изпратена успешно!",
     "ERROR": "Възникна грешка. Моля, опитайте отново."
-  }
+  },
+  "data_security": "Сигурност на данните"
 }
