--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
     "message": "Message",
     "sending": "Sending…",
     "submit": "Submit",
+    "data_security": "Data Security",
     "con_param1": "We don’t share your personal information with anyone. Check out our",
     "privacy_policy_form": "“privacy policy”",
     "con_param2": "for more information",
