--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,6 +15,7 @@
   "message": "Mensaje",
   "sending": "Enviando…",
   "submit": "Enviar",
+  "data_security": "Seguridad de los datos",
   "con_param1": "No compartimos tu información personal con nadie. Consulta nuestra",
   "privacy_policy_form": "“política de privacidad”",
   "con_param2": "para más información",
@@ -171,7 +172,7 @@
   "wlc_platform": "Plataforma de apuestas White Label",
   "exch_iframe": "Iframe Exchangebook",
   "footer_para_1": "El logotipo y el material gráfico de Vrnl son propiedad intelectual de la empresa y no pueden copiarse, reproducirse, distribuirse ni mostrarse sin el consentimiento por escrito de Vrnl.",
-  "footer_para_2": "Copyright © 2020 Vrnl ltd. Todos los derechos reservados.",
+  "footer_para_2": "Copyright © 2025 Vrnl ltd. Todos los derechos reservados.",
   "home": "Inicio",
   "betting": "Apuestas",
   "esports_betting": "Apuestas de eSports",
