--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -171,7 +171,7 @@
     "wlc_platform": "白标投注平台",
     "exch_iframe": "交易平台 iframe",
     "footer_para_1": "Vrnl 的标识和图形素材属于公司知识产权，未经 Vrnl 书面同意不得复制、分发或展示。",
-    "footer_para_2": "版权所有 © 2020 Vrnl ltd. 保留所有权利。",
+    "footer_para_2": "版权所有 © 2025 Vrnl ltd. 保留所有权利。",
     "home": "首页",
     "betting": "投注",
     "esports_betting": "电子竞技博彩",
@@ -597,5 +597,6 @@
     "objection_processing_desp": "<strong>e. 反对处理</strong><br> 如果您的个人信息被用于直接营销目的，您可以随时通过发送电子邮件请求我们停止为这些直接营销目的处理您的数据。<br> 请注意，如果您不允许我们收集您的个人信息，我们可能无法向您提供某些体验、产品和服务，并且我们的部分服务可能无法考虑您的兴趣和偏好。如果收集个人信息是强制性的，我们将在收集时明确说明，以便您做出知情决定是否参与。如果您对我们处理或保留的关于您的具体个人信息以及您对该个人信息的权利有疑问，请联系客户支持团队。",
     "disclosure_tp_e_desp": "<strong>e. 业务转让</strong><br> 我们会将个人信息提供给我们的关联公司和其他可信的企业或个人，由其按照我们的指示处理，并遵守我们的隐私政策以及其他适当的保密和安全措施。例如，我们可能会使用服务提供商来协助客户支持。<br> 如果 vrnl 与另一家公司合并或被另一家公司收购，或者在业务重组或重新组织的情况下，我们及我们的关联公司可能会全部或部分共享您的个人信息给另一商业实体。",
     "rectification_iii_desp": "<strong>b. 不准确或不完整信息的更正</strong><br> 您可以通过发送电子邮件请求我们更正有关您的不准确或不完整的个人信息（这是您无法在您的 moneycontrol 账户中自行更新的信息）。<br> 您可以通过账户设置访问并更新部分个人信息。如果您选择将 vrnl.net 个人资料连接到第三方应用程序，例如 Facebook 或 Google，您可以通过更改账户设置更改设置并移除应用程序权限。您有责任保持个人信息的最新性。vrnl.net 可能会通过电子邮件定期发送提醒，以保持个人信息的准确性。",
-    "disclosure_tp_c_desp": "<strong>c. 服务提供商</strong><br> vrnl.net 可能包含指向各种第三方网站的链接，这些网站可能会收集您的个人信息。在这些第三方平台上收集的您的信息的使用将受该第三方平台的隐私政策约束。这些网站或应用程序受其各自的隐私政策约束，这超出了我们的控制范围。一旦您离开我们的服务器（您可以通过浏览器地址栏的 URL 查看所在位置），您提供的任何信息的使用将受您访问的应用程序运营商的隐私政策约束。该政策可能与我们的不同。如果您无法通过应用程序主页的链接找到这些网站的隐私政策，您应直接联系应用程序所有者以获取更多信息。<br> 我们可能会公开共享不具个人识别性的资料，并与我们的合作伙伴共享——例如出版商、广告商、开发者或权利持有人。例如，我们公开共享信息以展示我们服务的一般使用趋势。我们还允许特定合作伙伴使用其自己的 cookies 或类似技术从您的浏览器或设备收集信息，用于营销/推广和测量目的。"
+    "disclosure_tp_c_desp": "<strong>c. 服务提供商</strong><br> vrnl.net 可能包含指向各种第三方网站的链接，这些网站可能会收集您的个人信息。在这些第三方平台上收集的您的信息的使用将受该第三方平台的隐私政策约束。这些网站或应用程序受其各自的隐私政策约束，这超出了我们的控制范围。一旦您离开我们的服务器（您可以通过浏览器地址栏的 URL 查看所在位置），您提供的任何信息的使用将受您访问的应用程序运营商的隐私政策约束。该政策可能与我们的不同。如果您无法通过应用程序主页的链接找到这些网站的隐私政策，您应直接联系应用程序所有者以获取更多信息。<br> 我们可能会公开共享不具个人识别性的资料，并与我们的合作伙伴共享——例如出版商、广告商、开发者或权利持有人。例如，我们公开共享信息以展示我们服务的一般使用趋势。我们还允许特定合作伙伴使用其自己的 cookies 或类似技术从您的浏览器或设备收集信息，用于营销/推广和测量目的。",
+    "data_security": "数据安全"
 }
