--- a/src/assets/i18n/bs.json
+++ b/src/assets/i18n/bs.json
@@ -171,7 +171,7 @@
   "wlc_platform": "White Label Betting Platform",
   "exch_iframe": "Exchangebook iframe",
   "footer_para_1": "Logo i grafički materijal Vrnl-a je intelektualno vlasništvo kompanije i ne smije se kopirati, reproducirati, distribuirati ili prikazivati bez pismenog pristanka Vrnl-a.",
-  "footer_para_2": "Copyright © 2020 Vrnl ltd. Sva prava zadržana.",
+  "footer_para_2": "Copyright © 2025 Vrnl ltd. Sva prava zadržana.",
   "home": "Početna",
   "betting": "Klađenje",
   "esports_betting": "eSports klađenje",
@@ -597,5 +597,6 @@
     "SUBMITTING": "Slanje zahtjeva...",
     "SUCCESS": "Zahtjev za demo je uspješno poslan!",
     "ERROR": "Došlo je do greške. Molimo pokušajte ponovo."
-  }
+  },
+  "data_security": "Sigurnost podataka"
 }
