--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -171,7 +171,7 @@
   "wlc_platform": "화이트 라벨 베팅 플랫폼",
   "exch_iframe": "Exchangebook iframe",
   "footer_para_1": "Vrnl의 로고와 그래픽 자료는 회사의 지적 재산이며, Vrnl의 서면 동의 없이는 복사, 재생산, 배포, 표시할 수 없습니다.",
-  "footer_para_2": "Copyright © 2020 Vrnl Ltd. All rights reserved.",
+  "footer_para_2": "Copyright © 2025 Vrnl Ltd. All rights reserved.",
   "home": "홈",
   "betting": "베팅",
   "esports_betting": "e스포츠 베팅",
@@ -597,5 +597,6 @@
   "objection_processing_desp": "<strong>e. 처리 반대</strong><br> 귀하의 개인 정보가 직접 마케팅 목적으로 처리되는 경우, 언제든지 이메일을 보내 이러한 직접 마케팅 목적으로의 데이터 처리 중단을 요청할 수 있습니다.<br> 귀하가 개인 정보 수집을 허용하지 않으면 특정 경험, 제품 및 서비스를 제공하지 못할 수 있으며, 일부 서비스는 귀하의 관심사와 선호도를 반영하지 못할 수 있습니다. 개인 정보 수집이 필수적인 경우, 수집 시점에 이를 명확히 하여 귀하가 참여 여부를 정보에 기반하여 결정할 수 있도록 합니다. 처리 또는 보유되는 특정 개인 정보 및 해당 개인 정보와 관련된 권리에 대한 문의는 고객 지원팀에 연락하시기 바랍니다.",
   "disclosure_tp_e_desp": "<strong>e. 사업 양도</strong><br> 우리는 자회사 및 신뢰할 수 있는 다른 기업이나 개인에게 지침에 따라, 그리고 개인정보 보호정책 및 기타 적절한 기밀 및 보안 조치를 준수하면서 개인 정보를 처리하도록 제공합니다. 예를 들어, 고객 지원을 돕기 위해 서비스 제공업체를 사용할 수 있습니다.<br> vrnl이 다른 회사와 합병되거나 인수되거나, 사업 재조직 또는 구조조정이 발생하는 경우, 우리 및 자회사는 귀하의 개인 정보를 전부 또는 일부 다른 사업체와 공유할 수 있습니다.",
   "rectification_iii_desp": "<strong>b. 부정확하거나 불완전한 정보의 수정</strong><br> 귀하와 관련된 부정확하거나 불완전한 개인 정보를 수정하도록 요청할 수 있습니다(이 정보는 moneycontrol 계정에서 직접 업데이트할 수 없는 정보임) 이메일을 통해 요청하세요.<br> 계정 설정을 통해 일부 개인 정보를 접근하고 업데이트할 수 있습니다. vrnl.net 프로필을 Facebook 또는 Google과 같은 제3자 애플리케이션과 연결한 경우, 계정 설정을 변경하여 앱에 대한 권한을 제거할 수 있습니다. 개인 정보를 최신 상태로 유지하는 것은 귀하의 책임입니다. vrnl.net은 이메일을 통해 주기적으로 개인 정보 정확성을 유지하도록 알림을 보낼 수 있습니다.",
-  "disclosure_tp_c_desp": "<strong>c. 서비스 제공업체</strong><br> vrnl.net은 귀하의 개인 정보를 수집할 수 있는 다양한 제3자 웹사이트 링크를 포함할 수 있습니다. 해당 제3자 플랫폼에서 수집된 정보의 사용은 해당 플랫폼의 개인정보 보호정책에 따릅니다. 이러한 웹사이트나 애플리케이션은 각자의 개인정보 보호정책에 따라 운영되며, 이는 우리 통제 범위를 벗어납니다. 서버를 떠나면(브라우저 주소 표시줄의 URL을 확인하면 위치를 알 수 있음), 제공된 정보의 사용은 방문 중인 애플리케이션 운영자의 개인정보 보호정책에 따릅니다. 이 정책은 우리의 정책과 다를 수 있습니다. 애플리케이션 홈페이지의 링크를 통해 이러한 사이트의 개인정보 보호정책을 찾을 수 없는 경우, 애플리케이션 소유자에게 직접 문의해야 합니다.<br> 우리는 개인 식별이 불가능한 정보를 공개적으로 및 파트너(예: 출판사, 광고주, 개발자, 권리 보유자)와 공유할 수 있습니다. 예를 들어, 서비스 일반 사용에 대한 추세를 보여주기 위해 정보를 공개적으로 공유합니다. 또한 특정 파트너가 마케팅/프로모션 및 측정 목적으로 브라우저나 장치에서 정보를 수집하도록 허용하며, 그들은 자체 쿠키 또는 유사 기술을 사용합니다."
+  "disclosure_tp_c_desp": "<strong>c. 서비스 제공업체</strong><br> vrnl.net은 귀하의 개인 정보를 수집할 수 있는 다양한 제3자 웹사이트 링크를 포함할 수 있습니다. 해당 제3자 플랫폼에서 수집된 정보의 사용은 해당 플랫폼의 개인정보 보호정책에 따릅니다. 이러한 웹사이트나 애플리케이션은 각자의 개인정보 보호정책에 따라 운영되며, 이는 우리 통제 범위를 벗어납니다. 서버를 떠나면(브라우저 주소 표시줄의 URL을 확인하면 위치를 알 수 있음), 제공된 정보의 사용은 방문 중인 애플리케이션 운영자의 개인정보 보호정책에 따릅니다. 이 정책은 우리의 정책과 다를 수 있습니다. 애플리케이션 홈페이지의 링크를 통해 이러한 사이트의 개인정보 보호정책을 찾을 수 없는 경우, 애플리케이션 소유자에게 직접 문의해야 합니다.<br> 우리는 개인 식별이 불가능한 정보를 공개적으로 및 파트너(예: 출판사, 광고주, 개발자, 권리 보유자)와 공유할 수 있습니다. 예를 들어, 서비스 일반 사용에 대한 추세를 보여주기 위해 정보를 공개적으로 공유합니다. 또한 특정 파트너가 마케팅/프로모션 및 측정 목적으로 브라우저나 장치에서 정보를 수집하도록 허용하며, 그들은 자체 쿠키 또는 유사 기술을 사용합니다.",
+  "data_security": "데이터 보안"
 }
